@@ -151,9 +151,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Project
+.pdf
 *.pdf
-
-/examples/gtr/
-/examples/rails/
-
-
+/examples/temp
