@@ -1,9 +1,0 @@
-#!/bin/bash
-# CHANGE LINE BELOW AS NEEDED!
-export PYTHONPATH="${PYTHONPATH}:/home/derek/Projects/Personal/pyprototypr"
-rm *.pdf
-#python test.py
-#python basic.py
-#python cards.py
-#python cards_design.py
-python new.py
