@@ -22,3 +22,8 @@ Changes
 * Refactor draw() method
 * Improve examples
 * Add documentation
+
+2023-04-09 (0.1.5a3)
+--------------------
+* Add more shapes
+* Improve examples
